--- a/src/3d-studio/style.styl
+++ b/src/3d-studio/style.styl
@@ -14,6 +14,7 @@
   --scale calc(0.75 + (var(--zoomed) * 4))
   --wall-thickness 4
   --cm calc((var(--plane-height) / 240))
+  --transition 0.2s
   // Colors
   --floor-shade-one hsl(30, 40%, 40%)
   --floor-shade-two hsl(30, 40%, 60%)
@@ -31,6 +32,7 @@
   --fade-two hsl(200, 80%, 85%)
   --fade-three hsl(280, 80%, 85%)
   --fade-four hsl(120, 80%, 85%)
+  --cube hsl(0, 0%, 95%)
   --leg-one hsl(0, 0%, 10%)
   --leg-two hsl(0, 0%, 12%)
   --leg-three hsl(0, 0%, 14%)
@@ -42,6 +44,7 @@
   --peripheral-four hsl(0, 0%, 50%)
   --mac-one hsl(0, 0%, 80%)
   --mac-two hsl(0, 0%, 70%)
+  --blind hsl(30, 50%, 90%)
   --mac-three hsl(0, 0%, 60%)
   --pot-one hsl(20, 50%, 50%)
   --pot-two hsl(20, 50%, 40%)
@@ -50,19 +53,196 @@
   --chair-two hsl(0, 0%, 10%)
   --chair-three hsl(0, 0%, 20%)
   --chair-four hsl(0, 0%, 30%)
-  --chair-accent-one hsl(0, 0%, 80%)
+  --chair-accent-one hsl(0, 0%, 95%)
   --chair-accent-two hsl(0, 60%, 60%)
+  --bg hsl(210, 80%, 90%)
+  --light hsl(0, 0%, 80%)
+  --icon hsl(210, 50%, 60%)
 
 // We're saying that 50vmin === 240cm
-
+audio
+  display none
 body
   min-height 100vh
-  // overflow hidden
-  background hsl(210, 80%, 90%)
+  overflow hidden
 
 .dg.ac
   z-index 100
   transform translate3d(0, 0, 50vmin)
+
+// Interactions
+[type="checkbox"]
+  position absolute
+  left 100%
+  opacity 0
+  height 0
+  width 0
+
+label
+  position fixed
+  z-index 100
+  right 1rem
+  bottom 1rem
+  border-radius 50%
+  height 44px
+  width 44px
+  cursor pointer
+  transform translate3d(0, 0, 50vmin) translate(0, calc((var(--index) * -100%) + (var(--index) * -10px)))
+
+svg
+  height 28px
+  width 28px
+  position absolute
+  top 50%
+  left 50%
+  transform translate(-50%, -50%)
+
+path
+  fill var(--icon)
+
+[for='spin']
+  --index 0
+[for='dark']
+  --index 1
+[for='audio']
+  --index 2
+[for='zoom']
+  --index 3
+
+
+#spin:checked ~ .scene__wrapper
+  --spin 1
+
+#zoom:checked ~ .scene__wrapper
+  --zoomed 1
+  --scale 4.75
+
+#zoom:checked ~ label:not([for='zoom'])
+  display none
+
+#zoom:checked + label
+  background hsl(0, 0%, 100%)
+
+#dark:checked ~ .scene__wrapper
+  .light-cube div
+  .light-cube:after
+    animation fade 10s calc(2 * var(--transition)) infinite linear
+
+    @keyframes fade
+      0%, 100%
+        background var(--fade-one)
+      25%
+        background var(--fade-two)
+      50%
+        background var(--fade-three)
+      75%
+        background var(--fade-four)
+
+  .light-cube:after
+    filter blur(var(--blur))
+
+  .wall--left div:nth-of-type(3):after
+    opacity 1
+
+  .wall--right-right div:nth-of-type(1):after
+  .shelf div:nth-of-type(5):after
+    animation fade 10s calc(2 * var(--transition)) infinite linear
+
+  .jfdi div:nth-of-type(3):after
+    color hsl(0, 0%, 80%)
+  .jfdi div:nth-of-type(4):after
+    transition transform var(--transition) var(--transition)
+    transform translate(-8%, -16%)
+
+  .windowsill div:nth-of-type(1)
+  .windowsill div:nth-of-type(5)
+  .floor div:nth-of-type(5)
+    filter brightness(0.25)
+
+  .plant__plant
+    filter brightness(0.5)
+
+  .chair__back div:nth-of-type(3):after
+    filter brightness(0.25)
+
+  .desk__top div:nth-of-type(1)
+    filter brightness(0.1)
+  .desk__top div:nth-of-type(3)
+    filter brightness(0.3)
+  .desk__top div:nth-of-type(5)
+    filter brightness(0.2)
+
+  .bear-canvas div
+    filter brightness(0.35)
+
+  .bear-canvas div:nth-of-type(1)
+    filter brightness(0.35) grayscale(1)
+
+  .rug div:nth-of-type(5)
+    filter brightness(0.25)
+
+#zoom:checked ~ .scene__wrapper
+  .scene
+  .studio
+  .plane
+    transition transform var(--transition)
+  .chair
+    transition opacity var(--transition)
+
+// Flip switches plus colors
+#dark:checked ~ .scene__wrapper
+  --dark 1
+  --floor-shade-one hsl(30, 40%, 10%)
+  --floor-shade-two hsl(30, 40%, 20%)
+  --floor-shade-three hsl(30, 40%, 30%)
+  --windowsill-shade-one hsl(35, 50%, 30%)
+  --windowsill-shade-two hsl(35, 50%, 20%)
+  --windowsill-shade-three hsl(35, 50%, 10%)
+  --wall-shade-one hsl(0, 0%, 38%)
+  --wall-shade-two hsl(0, 0%, 35%)
+  --wall-shade-three hsl(0, 0%, 30%)
+  --wall-shade-four hsl(0, 0%, 25%)
+  --skirting-one hsl(0, 0%, 33%)
+  --skirting-two hsl(0, 0%, 28%)
+  --fade-one hsl(0, 80%, 85%)
+  --fade-two hsl(200, 80%, 85%)
+  --fade-three hsl(280, 80%, 85%)
+  --fade-four hsl(120, 80%, 85%)
+  --leg-one hsl(0, 0%, 5%)
+  --leg-two hsl(0, 0%, 6%)
+  --leg-three hsl(0, 0%, 7%)
+  --leg-four hsl(0, 0%, 8%)
+  --rug hsl(210, 40%, 10%)
+  --peripheral-one hsl(0, 0%, 10%)
+  --peripheral-two hsl(0, 0%, 15%)
+  --peripheral-three hsl(0, 0%, 20%)
+  --peripheral-four hsl(0, 0%, 25%)
+  --mac-one hsl(0, 0%, 20%)
+  --mac-two hsl(0, 0%, 18%)
+  --mac-three hsl(0, 0%, 15%)
+  --pot-one hsl(20, 50%, 30%)
+  --pot-two hsl(20, 50%, 20%)
+  --blind hsl(30, 50%, 20%)
+  --pot-three hsl(20, 50%, 10%)
+  --chair-one hsl(0, 0%, 0%)
+  --chair-two hsl(0, 0%, 5%)
+  --chair-three hsl(0, 0%, 10%)
+  --chair-four hsl(0, 0%, 15%)
+  --chair-accent-one hsl(0, 0%, 40%)
+  --chair-accent-two hsl(0, 60%, 30%)
+  --bg hsl(210, 80%, 10%)
+  --cube hsl(0, 0%, 40%)
+  --light hsl(0, 0%, 100%)
+  --icon hsl(210, 80%, 30%)
+
+
+:checked + label svg:last-of-type
+  display block
+:checked + label svg:first-of-type
+  display none
+
+label svg:last-of-type
+  display none
 
 .scene
   perspective calc(var(--perspective, 800) * 1px)
@@ -74,17 +254,9 @@ body
   justify-content center
   transform scale(var(--scale)) translate3d(0, 0, 50vmin)
 
-.scene
-.studio
-.plane
-  transition transform .5s
-.chair
-  transition opacity .2s
-
-// .light-cube div
-// .light-cube:after
-//   animation fade 10s infinite linear
-//   filter blur(calc(0.5 * var(--blur)))
+  &__wrapper
+    transition background var(--transition)
+    background var(--bg)
 
 .plane
   height calc(var(--plane-height, 25) * 1vmin)
@@ -179,6 +351,7 @@ body
   --z -0.5
   --y calc(var(--wall-thickness) * -1)
   --x calc(var(--wall-thickness) * -1)
+  transition background var(--transition)
 
   div:not(.studio__shadow)
     background var(--floor-shade-three)
@@ -189,6 +362,7 @@ body
     background var(--floor-shade-two)
 
   div:nth-of-type(5)
+    transition filter var(--transition)
     filter brightness(1)
 
     &:after
@@ -202,11 +376,7 @@ body
       background url('https://images.pexels.com/photos/235994/pexels-photo-235994.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260') 0 0 / 15vmin 15vmin
 
 .wall
-  // --height calc(4 * var(--cm))
-  //   --width calc(68 * var(--cm))
-  //   --depth calc(180 * var(--cm))
-  //   --z calc(64 * var(--cm))
-
+  transition background var(--transition)
   &--left
     --height calc(220 * var(--cm))
     --width var(--wall-thickness)
@@ -222,15 +392,32 @@ body
         background var(--wall-shade-one)
       &:nth-of-type(3)
         background var(--wall-shade-one)
-        &:after
+        overflow hidden
+        &:before
           content ''
           position absolute
           top 0
           left 0
           height 100%
           width 100%
+          overflow hidden
           filter blur(var(--blur))
-          background radial-gradient(rgba(0,0,0,0.5), transparent 100%) 36% 100%/64% 30% no-repeat, var(--wall-shade-one)
+          background radial-gradient(hsla(0, 0%, 0%, 0.5), transparent 100%) 80% 64% / 20% 35% no-repeat,
+            radial-gradient(hsla(0, 0%, 0%, 0.5), transparent 100%) 45% 58% / 45% 20% no-repeat,
+            radial-gradient(rgba(0,0,0,0.5), transparent 100%) 36% 100%/64% 30% no-repeat
+        &:after
+          content ''
+          position absolute
+          top 0
+          left 0
+          height 80%
+          width 80%
+          overflow hidden
+          filter blur(var(--blur))
+          transform rotate(41deg) translate(-18%, -36%)
+          opacity 0
+          transition opacity var(--transition) var(--transition)
+          background radial-gradient(circle at 50% 100%, hsla(45, 50%, 90%, 0.85), transparent 60%)
 
       &:nth-of-type(5)
         background var(--wall-shade-three)
@@ -304,8 +491,21 @@ body
     --y calc(var(--wall-thickness) * -1)
     --x calc(136 * var(--cm))
 
+
     div
       background var(--wall-shade-four)
+
+      &:nth-of-type(1):after
+        content ''
+        position absolute
+        height 24%
+        width 70%
+        border-radius 50%
+        background none
+        filter blur(calc(2 * var(--blur)))
+        top 15%
+        left 15%
+        opacity 0.75
 
       &:nth-of-type(2)
       &:nth-of-type(3)
@@ -327,20 +527,64 @@ body
     background var(--windowsill-shade-one)
 
     &:nth-of-type(1)
+      transition filter var(--transition)
       filter brightness(0.5)
       background url("https://images.pexels.com/photos/172276/pexels-photo-172276.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500")
     &:nth-of-type(2)
       background var(--wall-shade-one)
     &:nth-of-type(5)
+      transition filter var(--transition)
       background url("https://images.pexels.com/photos/172276/pexels-photo-172276.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500")
     &:nth-of-type(6)
       background var(--windowsill-shade-three)
+
+.studio-light
+  --width calc(4 * var(--cm))
+  --height calc(15 * var(--cm))
+  --depth calc(30 * var(--cm))
+  --z calc(146 * var(--cm))
+  --rotate-cuboid-z 20
+  --rotate-cuboid-x 30
+  --rotate-cuboid-y 45
+
+  top 86%
+  left 15%
+  margin-top calc((-15 * var(--cm)) * 1vmin)
+
+  div
+    background var(--peripheral-four)
+    transition background var(--transition)
+
+    &:nth-of-type(4)
+      background var(--light)
+      transition background var(--transition) var(--transition)
+    &:nth-of-type(5)
+      background var(--peripheral-two)
+    &:nth-of-type(3)
+      background var(--peripheral-one)
+
+  &__stand
+    --width calc(3 * var(--cm))
+    --depth calc(3 * var(--cm))
+    --height calc(80 * var(--cm))
+    --z calc(100 * var(--cm))
+
+    top 85%
+    left 15%
+
+    div
+      background var(--peripheral-four)
+
+      &:nth-of-type(1)
+        background var(--peripheral-one)
+      &:nth-of-type(3)
+        background var(--peripheral-three)
 
 .desk
   height calc((180 * var(--cm)) * 1vmin)
   width calc((68 * var(--cm)) * 1vmin)
   top calc((30 * var(--cm)) * 1vmin)
-  left calc((5 * var(--cm)) * 1vmin)
+  left calc((0 * var(--cm)) * 1vmin)
   position absolute
 
   &__shadow
@@ -349,17 +593,10 @@ body
     position absolute
 
     &--floor
-      background radial-gradient(circle at 0 50%, hsla(0, 0%, 0%, 0.5) 50%, transparent 80%)
+      background radial-gradient(circle at 0 50%, hsla(0, 0%, 0%, 0.35) 50%, transparent 80%)
       height 110%
       width 80%
       top 5%
-
-    &--wall
-      background red
-      height 100%
-      width 100%
-      transform-origin 0 50%
-      transform rotateY(-90deg) translate3d(0, 0, calc(var(--cm) * -1vmin))
 
   &__leg
     --width calc(8 * var(--cm))
@@ -386,6 +623,7 @@ body
       --z calc(1 * var(--cm))
 
     div
+      transition background var(--transition)
       background var(--leg-one)
 
       &:nth-of-type(1)
@@ -400,7 +638,7 @@ body
 
     div
       background url('https://images.pexels.com/photos/978484/pexels-photo-978484.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') 0 0 / 20vmin 30vmin
-
+      transition filter var(--transition), background var(--transition)
       &:nth-of-type(1)
         filter brightness(0.25)
       &:nth-of-type(5)
@@ -427,12 +665,14 @@ body
       left 4%
       height 100%
       width 100%
+      transition transform var(--transition)
       filter blur(var(--blur))
 
     &:nth-of-type(3)
       background hsl(0, 0%, 15%)
 
     &:nth-of-type(3):after
+      transition color var(--transition)
       content 'JFDI'
       position absolute
       top 0
@@ -460,6 +700,19 @@ body
 
     &:nth-of-type(5)
       background var(--wall-shade-one)
+      overflow hidden
+
+      &:after
+        content ''
+        height 200%
+        border-radius 50%
+        width 100%
+        position absolute
+        left 50%
+        top 50%
+        filter blur(calc(2 * var(--blur)))
+        transform translate(-80%, -50%)
+
     &:nth-of-type(3)
       background var(--wall-shade-two)
 
@@ -484,35 +737,13 @@ body
   --y calc(5 * var(--cm))
   --rotate-cuboid-z 40
 
-  &:after
-    content ''
-    height 150%
-    width 150%
-    position absolute
-    top 50%
-    left 50%
-    border-radius 50%
-    transform translate3d(-50%, -50%, calc((5 * var(--cm)) * 1vmin)) rotateX(90deg) rotateY(100deg) translate3d(0, -8%, 0)
-    opacity 0.5
-
   div
-    background hsl(0, 0%, 98%)
+    background var(--wall-shade-one)
 
     &:nth-of-type(1)
-      background hsl(0, 0%, 93%)
+      background var(--wall-shade-three)
     &:nth-of-type(3)
-      background hsl(0, 0%, 96%)
-
-
-@keyframes fade
-  0%, 100%
-    background var(--fade-four)
-  25%
-    background var(--fade-one)
-  50%
-    background var(--fade-two)
-  75%
-    background var(--fade-three)
+      background var(--wall-shade-two)
 
 .skirting
   &--left
@@ -522,6 +753,19 @@ body
     --z calc(4 * var(--cm))
     div
       background var(--skirting-one)
+      &:nth-of-type(3)
+        background var(--skirting-one)
+        &:after
+          content ''
+          position absolute
+          top 0
+          left 0
+          height 100%
+          width 100%
+          filter blur(var(--blur))
+          background radial-gradient(circle at 50% 50%, hsla(0, 0%, 0%, 0.5) 0 75%, transparent) 40% 0 / 70% 150% no-repeat
+      &:nth-of-type(5)
+        background linear-gradient(transparent, hsla(0, 0%, 0%, 0.5), transparent) 0 50% / 100% 70% no-repeat, var(--skirting-one)
   &--right
     --height calc(8 * var(--cm))
     --width calc(240 * var(--cm))
@@ -542,6 +786,8 @@ body
     background var(--rug)
 
     &:nth-of-type(5)
+      transition filter var(--transition)
+      filter brightness(1)
       background url('https://images.pexels.com/photos/3707669/pexels-photo-3707669.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940')
       background-size cover
 
@@ -666,7 +912,7 @@ body
   position absolute
   top 50%
   left 50%
-  transform translate(-50%, -50%)
+  transform translate3d(-50%, -50%, calc(var(--cm) * 0.1vmin))
 
 .mouse
   --depth calc(6 * var(--cm))
@@ -704,13 +950,15 @@ body
 
   div
     background hsl(0, 0%, 95%)
+    filter brightness(1)
+    transition filter var(--transition)
 
     &:nth-of-type(1)
       background linear-gradient(hsla(0, 0%, 100%, 0.25), hsla(0, 0%, 100%, 0.25)), url("https://assets.codepen.io/605876/avatar.png"), hsl(0, 0%, 98%)
       background-size 75%
       background-position center
       background-repeat no-repeat
-      filter grayscale(1)
+      filter brightness(1) grayscale(1)
 
     &:nth-of-type(2):after
       content ''
@@ -783,7 +1031,7 @@ body
     top 0
     left 0
     transform-origin 50% 0%
-    transition transform 0.2s
+    transition transform calc(2 * var(--transition)) var(--transition)
     transform scaleY(var(--dark))
 
 .blind
@@ -792,9 +1040,9 @@ body
   position absolute
   top -5%
   left 0
-  background hsl(30, 50%, 90%)
+  background var(--blind)
   transform-origin 50% 50%
-  transition transform 0.2s
+  transition transform calc(2 * var(--transition)) var(--transition), background var(--transition)
   // Can be translated by 100% or 1%
   // Can be rotated by -2deg or -90deg
   transform translate(0, calc((var(--index) * (100 * var(--dark))) * 1%)) rotateX(calc((-85 + (var(--dark) * 83)) * 1deg))
@@ -806,6 +1054,8 @@ body
   transform translate3d(calc((208 * var(--cm)) * 1vmin), calc((6 * var(--cm)) * 1vmin), calc((146 * var(--cm)) * 1vmin))
 
   &__plant
+    transition filter var(--transition)
+    filter brightness(1)
     height calc((50 * var(--cm)) * 1vmin)
     position absolute
     bottom 50%
@@ -1009,6 +1259,8 @@ body
         transform translate(-50%, -50%)
         height 40%
         width 40%
+        filter brightness(1)
+        transition filter var(--transition)
         background url("https://assets.codepen.io/605876/avatar.png")
         background-size contain
         background-repeat no-repeat
